Fix CORS for www.aeg-admin.tech and Vercel preview origins.
Use allowedOriginPatterns with credentials, permit OPTIONS preflight, and include www subdomain in default allowed origins.

Co-authored-by: Cursor <cursoragent@cursor.com>